# InterSwapX

./: README.md
client/: Dockerfile  README.md  index.html  package.json  vite.config.ts
client/public/: manifest.json
client/src/: App.tsx  index.d.ts  index.tsx  theme.tsx
client/src/components/: Connect.tsx  Footer.tsx  Navbar.tsx
client/src/components/Home/: Intro.tsx  Roadmap.tsx  Team.tsx  Why.tsx
client/src/components/Swap/: FormSection.tsx  TokenInputFrom.tsx  TokenInputTo.tsx
client/src/components/Swap/Market/: FromTo.tsx
client/src/components/UI/: ErrorBox.tsx  ResultModal.tsx  SuccessBox.tsx  SwitchIcon.tsx
client/src/pages/: Home.tsx  Swap.tsx
client/src/util/: conversion.tsx  index.ts
cosmo-aggr/: Cargo.toml  NOTICE
cosmo-aggr/artifacts/: checksums.txt  checksums_intermediate.txt  cosmo_aggr.wasm
cosmo-aggr/src/: contract.rs  lib.rs  msg.rs  proto.rs  state.rs
neuton-dex/: Cargo.toml
neuton-dex/artifacts/: checksums.txt  checksums_intermediate.txt  neuton_dex.wasm
neuton-dex/src/: contract.rs  msg.rs
relayer-config/: config.toml
